--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,15 +5,9 @@
         <item>Неделя</item>
         <item>Месяц</item>
     </string-array>
-    <string name="action_settings">Settings</string>
-    <string name="drawer_item_home">Home</string>
-    <string name="drawer_item_free_play">Free Play</string>
-    <string name="drawer_item_custom">Custom</string>
-    <string name="drawer_item_settings">Settings</string>
-    <string name="drawer_item_help">Help</string>
-    <string name="drawer_item_open_source">Open Source</string>
-    <string name="drawer_item_contact">Contact</string>
-    <string name="title_activity_main_screen">MainScreen</string>
+    <string name = "typeOfWorkError">Введите тип работы</string>
+    <string name = "kilometrsError">Введите количество километров</string>
+    <string name = "tvDate">Выберите дату начала</string>
     <!--
     This string is used for square devices and overridden by hello_world in
     values-round/strings.xml for round devices.
