Добавлена анимация переходов между активити, также появилась подсказка в настройках и немного поигрался со стилями

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
         <item>Месяц</item>
     </string-array>
     <string name = "typeOfWorkError">Введите тип работы</string>
-    <string name = "kilometrsError">Введите количество километров</string>
+    <string
+        name = "kilometrsError">Введите количество километров</string>
     <string name = "tvDate">Выберите дату начала</string>
 
 </resources>
